--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,42 +1,65 @@
 /* src/Grid.css */
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    gap: 8px;
-  }
-  
-  .cell {
-    width: 48px;
-    height: 48px;
-    background-color: rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    position: relative;
-  }
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 8px;
+}
 
-  .cell::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(252, 32, 138, 0.2);
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    pointer-events: none;
-  }
+.cell {
+  width: 48px;
+  height: 48px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 3px solid rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+  position: relative;
+  box-sizing: border-box;
+}
 
-  .cell:hover::before {
+.cell::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(252, 32, 138, 0.2);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.cell:hover::before {
+  opacity: 1;
+}
+
+.cell.queued {
+  animation: pulse 2s infinite;
+}
+
+.cell.active {
+  background-color: #fc208a;
+}
+
+.waveform {
+  display: block;
+  margin: 20px auto;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+
+/* Animations */
+@keyframes pulse {
+  0% {
+    background-color: #fc208a;
+    opacity: 0.5;
+  }
+  50% {
+    background-color: #fc208a;
     opacity: 1;
   }
-  
-  .cell.active {
+  100% {
     background-color: #fc208a;
+    opacity: 0.5;
   }
-
-  .waveform {
-    display: block;
-    margin: 20px auto;
-    background: rgba(0, 0, 0, 1);
 }
