--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --text-primary: rgba(255, 255, 255, 1);
 }
 
 a {
@@ -29,12 +31,14 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: rgba(0, 0, 0, 1);
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
   margin-top: 0;
+  color: var(--text-primary);
 }
 
 button {
