Fixing with aspect ratio

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -7,8 +7,7 @@
 }
 
 .cell {
-  width: 48px;
-  height: 48px;
+  aspect-ratio: 1/1;
   background-color: rgba(255, 255, 255, 0.3);
   border: 3px solid rgba(255, 255, 255, 0.1);
   cursor: pointer;
@@ -68,32 +67,8 @@
 
 /* For mobile devices with width up to 600px */
 @media (max-width: 600px) {
-  .grid {
-    gap: 4px;
-  }
-
-  .cell {
-    width: 32px;
-    height: 32px;
-  }
 
   .waveform {
-    margin: 10px auto;
-  }
-}
-
-/* For tablet devices with width between 601px to 1024px */
-@media (min-width: 601px) and (max-width: 1024px) {
-  .grid {
-    gap: 6px;
-  }
-
-  .cell {
-    width: 40px;
-    height: 40px;
-  }
-
-  .waveform {
-    margin: 15px auto;
+    width: 100%;
   }
 }
