--- a/src/index.css
+++ b/src/index.css
@@ -64,15 +64,13 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+/* Responsive 📱 */
+
+/* For mobile devices with width up to 600px */
+@media (max-width: 600px) {
+
+  body {
+    place-items: flex-start;
   }
 }
