--- a/src/Grid.css
+++ b/src/Grid.css
@@ -3,10 +3,13 @@
 .presenceContainer {
   position: relative;
   margin-bottom: 2rem;
+  height: 3rem;
 }
 
 .audioStartMessage {
-  cursor: default;
+  margin: 0;
+  height: 3rem;
+  line-height: 3rem;
 }
 
 .presenceAvatars {
@@ -14,6 +17,22 @@
   top: 0;
   width: 100%;
   transition: opacity 0.5s;
+}
+
+.presenceAvatar {
+  padding: 0.8125rem;
+  text-align: center;
+  line-height: 1rem;
+  border: 3px solid #FC49AB;
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  margin-right: 0.5rem;
+}
+
+.presenceAvatar:last-child {
+  margin-right: 0;
 }
 
 .hidden {
@@ -31,9 +50,9 @@
   aspect-ratio: 1/1;
   background-color: rgba(255, 255, 255, 0.3);
   border: 3px solid rgba(255, 255, 255, 0.1);
-  cursor: pointer;
   position: relative;
   box-sizing: border-box;
+  cursor: none;
 }
 
 .cell::before {
