--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,8 +1,38 @@
 /* src/Grid.css */
 
-.audioStartMessage {
+.presenceContainer {
+  position: relative;
   margin-bottom: 2rem;
-  cursor: default;
+  height: 3rem;
+}
+
+.audioStartMessage {
+  margin: 0;
+  height: 3rem;
+  line-height: 3rem;
+}
+
+.presenceAvatars {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  transition: opacity 0.5s;
+}
+
+.presenceAvatar {
+  padding: 0.8125rem;
+  text-align: center;
+  line-height: 1rem;
+  border: 3px solid #FC49AB;
+  border-radius: 50%;
+  height: 1rem;
+  width: 1rem;
+  display: inline-block;
+  margin-right: 0.5rem;
+}
+
+.presenceAvatar:last-child {
+  margin-right: 0;
 }
 
 .hidden {
@@ -20,9 +50,9 @@
   aspect-ratio: 1/1;
   background-color: rgba(255, 255, 255, 0.3);
   border: 3px solid rgba(255, 255, 255, 0.1);
-  cursor: pointer;
   position: relative;
   box-sizing: border-box;
+  cursor: none;
 }
 
 .cellHighlight {
