--- a/src/Grid.css
+++ b/src/Grid.css
@@ -20,6 +20,9 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 8px;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .cell {
