--- a/src/Grid.css
+++ b/src/Grid.css
@@ -2,13 +2,13 @@
 
 .presenceContainer {
   position: relative;
-  height: 3rem;
+  height: 2rem;
 }
 
 .audioStartMessage {
   margin: 0;
-  height: 3rem;
-  line-height: 3rem;
+  height: 2rem;
+  line-height: 2rem;
 }
 
 .hidden {
@@ -45,8 +45,14 @@
   pointer-events: none;
 }
 
-.cell:hover > .cellHighlight {
+.cell-hovered > .cellHighlight {
   opacity: 0.7;
+}
+
+@media (hover: none) {
+  .cell-hovered > .cellHighlight {
+    transform: scale(2);
+  }
 }
 
 .cell.queued {
@@ -58,22 +64,6 @@
   margin: 20px auto;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 8px;
-}
-
-/* Animations */
-@keyframes pulse {
-  0% {
-    background-color: #fc208a;
-    opacity: 0.5;
-  }
-  50% {
-    background-color: #fc208a;
-    opacity: 0.75;
-  }
-  100% {
-    background-color: #fc208a;
-    opacity: 0.5;
-  }
 }
 
 /* Responsive 📱 */
