try animating cursor

--- a/src/CursorField.css
+++ b/src/CursorField.css
@@ -5,10 +5,12 @@
   left: 0px;
   transform: translate3d(0, 0, 0);
   z-index: 300;
+  transition: transform 0.03s;
 }
 
 @media (hover: none) {
   .cursor-self {
+    transition: none;
     display: none;
   }
 }
