--- a/src/CursorField.css
+++ b/src/CursorField.css
@@ -5,7 +5,10 @@
   left: 0px;
   transform: translate3d(0, 0, 0);
   z-index: 300;
-  transition: transform 300ms;
+}
+
+.cursor-touch {
+  transition: transform 100ms;
 }
 
 .cursor-self {
