--- a/frontend/global.css
+++ b/frontend/global.css
@@ -16,6 +16,13 @@
   --text-primary: rgba(255, 255, 255, 1);
 }
 
+#__next {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 a {
   font-weight: 500;
   cursor: none;
