--- a/frontend/global.css
+++ b/frontend/global.css
@@ -1,14 +1,34 @@
+@font-face {
+  font-family: 'Muoto';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: block;
+  src: url('assets/fonts/muoto-var.ttf') format('truetype-variations');
+}
+
+@font-face {
+  font-family: 'Muoto-italic';
+  font-style: italic;
+  font-weight: 400;
+  font-display: block;
+  src: url('assets/fonts/muoto-italic.woff2') format('woff2');
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
+  font-family: 'Muoto';
+  font-size: 1rem;
+  font-variant-ligatures: common-ligatures;
+  -webkit-font-feature-settings:
+    'liga' on,
+    'calt' on;
   text-rendering: optimizeLegibility;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 1);
+  background-color: #242424;
+  font-synthesis: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
@@ -65,15 +85,16 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
+  cursor: none;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #FC208A;
+  cursor: none;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: 1px auto #FC208A;
 }
 
 /* Responsive 📱 */
