--- a/frontend/Grid.module.css
+++ b/frontend/Grid.module.css
@@ -29,6 +29,10 @@
   min-width: 0;
 }
 
+.grid.gridSnapshot {
+  grid-template-columns: repeat(8, 1fr);
+}
+
 .cell {
   aspect-ratio: 1/1;
   background-color: rgba(255, 255, 255, 0.3);
