--- a/frontend/global.css
+++ b/frontend/global.css
@@ -36,9 +36,8 @@
 
 #__next {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  display: flex;
 }
 
 a {
@@ -62,7 +61,8 @@ html {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  align-items: stretch;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
   background: rgba(0, 0, 0, 1);
