--- a/frontend/PrescenceBar.module.css
+++ b/frontend/PrescenceBar.module.css
@@ -13,3 +13,20 @@
 .presenceAvatar:last-child {
   margin-right: 0;
 }
+
+.presenceOverflow {
+  text-align: center;
+  text-align: -webkit-center;
+  line-height: 2rem;
+  border: double 3px transparent;
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
+  display: inline-block;
+  margin: 0;
+  font-size: 12px;
+  font-weight: 800;
+  background-image: linear-gradient(black, black), conic-gradient( rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
