--- a/frontend/global.css
+++ b/frontend/global.css
@@ -1,24 +1,7 @@
-@font-face {
-  font-family: "Muoto";
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: block;
-  src: url("/fonts/muoto-var.ttf") format("truetype-variations");
-}
-
-@font-face {
-  font-family: "Muoto-italic";
-  font-style: italic;
-  font-weight: 400;
-  font-display: block;
-  src: url("/fonts/muoto-italic.woff2") format("woff2");
-}
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.5;
   font-weight: 400;
-  font-family: "Muoto";
   font-size: 1rem;
   font-variant-ligatures: common-ligatures;
   -webkit-font-feature-settings: "liga" on, "calt" on;
